--- a/courses/foundation/intro-to-using-ai/Intro to IA Assignment/index.html
+++ b/courses/foundation/intro-to-using-ai/Intro to IA Assignment/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>My Portfolio</title>
 </head>
+
+<header>
+    <h1>Oumaima Sakka</h1>
+</header>
 <body>
+ 
     
 </body>
 </html>
