Add change background button

--- a/courses/foundation/intro-to-using-ai/Intro to IA Assignment/index.html
+++ b/courses/foundation/intro-to-using-ai/Intro to IA Assignment/index.html
@@ -10,7 +10,7 @@
     <h1>Oumaima Sakka</h1>
   </header>
   <body>
-    <div class="container">
+    <main class="container">
       <h2>About Me</h2>
       <p>
         Hi, my name is Oumaima. I'm passionate about web development and
@@ -27,6 +27,8 @@
         <li>Learning New Technologies</li>
         <li>Sharing Knowledge and Helping Others Learn</li>
       </ul>
-    </div>
+
+      <button id="backgroundColorButton">Change Background Color</button>
+    </main>
   </body>
 </html>
