--- a/courses/foundation/intro-to-using-ai/Intro to IA Assignment/index.html
+++ b/courses/foundation/intro-to-using-ai/Intro to IA Assignment/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <header>
@@ -30,5 +31,6 @@
 
       <button id="backgroundColorButton">Change Background Color</button>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
