--- a/courses/foundation/intro-to-frontend/HYFBay/index.html
+++ b/courses/foundation/intro-to-frontend/HYFBay/index.html
@@ -8,7 +8,9 @@
   />
 </head>
 <body>
-  <main></main>
+  <main>
+    
+  </main>
   <script src="hyfBayHelpers.js"></script>
   <script src="main.js"></script>
 </body>
