--- a/courses/foundation/intro-to-frontend/HYFBay/index.html
+++ b/courses/foundation/intro-to-frontend/HYFBay/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   <main>
-    
+    <h1>hyfBay</h1>
+    <ul id="productList"></ul>
   </main>
   <script src="hyfBayHelpers.js"></script>
   <script src="main.js"></script>
